[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/mapinator/Scripts/DockFunctions.gd" type="Script" id=1]

[node name="Mapinator" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 0, 110 )
script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0
custom_constants/separation = 10

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 200.0
margin_bottom = 172.0

[node name="Json" type="Button" parent="HBoxContainer/VBoxContainer"]
margin_right = 200.0
margin_bottom = 40.0
rect_min_size = Vector2( 200, 40 )
text = "Open JSON"

[node name="Tileset" type="Button" parent="HBoxContainer/VBoxContainer"]
margin_top = 44.0
margin_right = 200.0
margin_bottom = 84.0
rect_min_size = Vector2( 200, 40 )
text = "Open Tileset"

[node name="Convert" type="Button" parent="HBoxContainer/VBoxContainer"]
margin_top = 88.0
margin_right = 200.0
margin_bottom = 128.0
rect_min_size = Vector2( 200, 40 )
disabled = true
text = "Convert"

[node name="Clear" type="Button" parent="HBoxContainer/VBoxContainer"]
margin_top = 132.0
margin_right = 200.0
margin_bottom = 172.0
rect_min_size = Vector2( 200, 40 )
text = "Clear Console"

[node name="Panel" type="Panel" parent="HBoxContainer"]
margin_left = 210.0
margin_right = 820.0
margin_bottom = 172.0
rect_min_size = Vector2( 610, 0 )

[node name="RichTextLabel" type="RichTextLabel" parent="HBoxContainer/Panel"]
margin_right = 610.0
margin_bottom = 170.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/default_color = Color( 0.666667, 0.666667, 0.666667, 1 )
bbcode_enabled = true
scroll_following = true

[node name="JsonOpener" type="FileDialog" parent="."]
margin_right = 315.0
margin_bottom = 130.0
window_title = "Open a File"
resizable = true
mode = 0
access = 2
filters = PoolStringArray( "*.json ; JSON files" )
current_dir = "/Users/My HP/OneDrive/Documents/Godot Projects/mapinator/Mapinator"
current_path = "/Users/My HP/OneDrive/Documents/Godot Projects/mapinator/Mapinator/"

[node name="TilesetOpener" type="FileDialog" parent="."]
margin_right = 315.0
margin_bottom = 130.0
window_title = "Open a Tileset"
resizable = true
mode = 0
access = 2
filters = PoolStringArray( "*.Tres ; Tileset file" )
current_dir = "/Users/My HP/OneDrive/Documents/Godot Projects/mapinator/Mapinator"
current_path = "/Users/My HP/OneDrive/Documents/Godot Projects/mapinator/Mapinator/"

[node name="SingleOpener" type="FileDialog" parent="."]
margin_right = 315.0
margin_bottom = 130.0
window_title = "Open a CoI JSON"
resizable = true
mode = 0
access = 2
filters = PoolStringArray( "*.Tres ; Tileset file" )
current_dir = "/Users/My HP/OneDrive/Documents/Godot Projects/mapinator/Mapinator"
current_path = "/Users/My HP/OneDrive/Documents/Godot Projects/mapinator/Mapinator/"

[connection signal="pressed" from="HBoxContainer/VBoxContainer/Json" to="." method="_on_Json_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/Tileset" to="." method="_on_Tileset_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/Convert" to="." method="_on_Convert_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/Clear" to="." method="_on_Clear_pressed"]
[connection signal="file_selected" from="JsonOpener" to="." method="_on_JsonOpener_file_selected"]
[connection signal="file_selected" from="TilesetOpener" to="." method="_on_TilesetOpener_file_selected"]
[connection signal="file_selected" from="SingleOpener" to="." method="_on_SingleOpener_file_selected"]
